--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Filterable Portfolio</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#2563eb" />
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" href="/img/logo.png" />
     <link rel="stylesheet" href="css/filtrify.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="manifest" href="./manifest.json" />
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="js/filtrify.min.js"></script>
